# riscy-business

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  clang-format.sh  encrypt.py  extract-bc.py  info.txt  linker.ld  main.c  relocs.py  requirements.txt  start.c  test2.cpp
.github/workflows/: build.yml
obfuscator/: .gitignore  CMakeLists.txt  README.md  cmake.toml  requirements.txt  test.py
obfuscator/include/obfuscator/: analyze.hpp  context.hpp  disassemble.hpp  msvc-secure.hpp  obfuscate.hpp  utility.hpp
obfuscator/lib/include/: analyzer.hpp  cfg.hpp  context.hpp  disassembler.hpp  instruction_data.hpp  logger.hpp  obfuscator.hpp  obfuscator_core.hpp  pe_loader.hpp  util.hpp
obfuscator/lib/src/: analyzer.cpp  cfg.cpp  context.cpp  disassembler.cpp  logger.cpp  obfuscator.cpp  obfuscator_core.cpp  pe_loader.cpp  util.cpp
obfuscator/pytests/: riscvm_run  test.py
obfuscator/src/: main.cpp  obfuscate.cpp
obfuscator/src/obfuscator/: analyze.cpp  context.cpp  disassemble.cpp  obfuscate.cpp  utility.cpp
obfuscator/src/tests/: test-context.cpp
obfuscator/tests/: isa_tests_no_obfuscation.cpp  isa_tests_obfuscation.cpp  syscall_handler.hpp  test_config.cpp  test_config.hpp  test_main.cpp
payload/: .gitignore  CMakeLists.txt  README.md  cmake.toml
payload/cmake/: riscvm.cmake
payload/crt/: minicrt.c  minicrt.cpp  riscvm-crt0.cpp  xhash
payload/include/: phnt.h  vector.hpp
payload/src/: main.cpp
riscvm/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  cmake.toml  encrypt.py  extract-bc.py  generate-isa-tests.py  main.cpp  opcodes.h  opcodes.json  relocs.py  riscvm-code.h  riscvm.c  riscvm.cpp  riscvm.h  riscvm.nelua  shuffle.py  shuffled_opcodes.h  shuffled_opcodes.json  tests.cpp  trace.h
riscvm/isa-tests/: README.txt  rv64ui-p-add  rv64ui-p-addi  rv64ui-p-addiw  rv64ui-p-addw  rv64ui-p-and  rv64ui-p-andi  rv64ui-p-auipc  rv64ui-p-beq  rv64ui-p-bge  rv64ui-p-bgeu  rv64ui-p-blt  rv64ui-p-bltu  rv64ui-p-bne  rv64ui-p-fence_i  rv64ui-p-jal  rv64ui-p-jalr  rv64ui-p-lb  rv64ui-p-lbu  rv64ui-p-ld  rv64ui-p-lh  rv64ui-p-lhu  rv64ui-p-lui  rv64ui-p-lw  rv64ui-p-lwu  rv64ui-p-ma_data  rv64ui-p-or  rv64ui-p-ori  rv64ui-p-sb  rv64ui-p-sd  rv64ui-p-sh  rv64ui-p-simple  rv64ui-p-sll  rv64ui-p-slli  rv64ui-p-slliw  rv64ui-p-sllw  rv64ui-p-slt  rv64ui-p-slti  rv64ui-p-sltiu  rv64ui-p-sltu  (+26 more)
riscvm/lib/: crt0-msvc.h  crt0.c  linker.ld  syscalls.hpp  windows.hpp
riscvm/test/: build.bat  main.c  test.cpp  test2.cpp  tinyc.cpp
riscvm_examples/: ack.c  fib.c  sieve.c  tests.c  win_syscall_test.c
riscvm_lib/: link.ld  start.s  syscalls.h  tinyc.c
riscvm_lib2/: common.hpp  ldr.hpp  syscalls.hpp  windows.hpp
test/: build.bat  crt0.c  info.txt  linker.ld  main.c  start.c  test.cpp  tinyc.cpp
transpiler/: .gitignore  CMakeLists.txt  cmake.toml
transpiler/cmake/: FindLLVM-Wrapper.cmake
transpiler/src/: transpiler.cpp  utility.hpp
